# amplifier-module-tool-deepresearch

./: README.md  pyproject.toml
amplifier_module_deepresearch/: __init__.py  _constants.py
amplifier_module_tool_deepresearch/: __init__.py  _prompt_utils.py
amplifier_module_tool_deepresearch/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: test_providers.py
