[project]
name = "amplifier-module-tool-deepresearch"
version = "0.1.0"
description = "Multi-provider deep research module for Amplifier - automated research with OpenAI and Anthropic"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Michael Jabbour" },
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]

[project.entry-points."amplifier.modules"]
tool-deepresearch = "amplifier_module_tool_deepresearch:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_tool_deepresearch",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
